[WIP] A bunch of things